fl_dll/library.h

extern float sumArrF(const float *arr, int count);
extern void readF(float *val, float set);
extern float sumMatFPtrPtr(int rows, int cols, const float** mat);
extern long long sumArrL(const long long *arr, long long count);
extern void readL(long long *val, long long set);
extern long long sumMatLPtrPtr(int rows, int cols, const long long** mat);
extern int sumArrI(const int *arr, int count);
extern void readI(int *val, int set);