src/test/java/jpassport/test/extracted/library_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern float sumArrF(const float *arr, int count)
     * }
     */
    public static MethodHandle sumArrF$handle() {
        return sumArrF.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern float sumArrF(const float *arr, int count)
     * }
     */
    public static MemorySegment sumArrF$address() {
        return sumArrF.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern float sumArrF(const float *arr, int count)
     * }
     */
    public static float sumArrF(MemorySegment arr, int count) {
        var mh$ = sumArrF.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrF", arr, count);
            }
            return (float)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readF {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_FLOAT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readF");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readF(float *val, float set)
     * }
     */
    public static FunctionDescriptor readF$descriptor() {
        return readF.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readF(float *val, float set)
     * }
     */
    public static MethodHandle readF$handle() {
        return readF.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readF(float *val, float set)
     * }
     */
    public static MemorySegment readF$address() {
        return readF.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readF(float *val, float set)
     * }
     */
    public static void readF(MemorySegment val, float set) {
        var mh$ = readF.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readF", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatFPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_FLOAT,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatFPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern float sumMatFPtrPtr(int rows, int cols, const float **mat)
     * }
     */
    public static FunctionDescriptor sumMatFPtrPtr$descriptor() {
        return sumMatFPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern float sumMatFPtrPtr(int rows, int cols, const float **mat)
     * }
     */
    public static MethodHandle sumMatFPtrPtr$handle() {
        return sumMatFPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern float sumMatFPtrPtr(int rows, int cols, const float **mat)
     * }
     */
    public static MemorySegment sumMatFPtrPtr$address() {
        return sumMatFPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern float sumMatFPtrPtr(int rows, int cols, const float **mat)
     * }
     */
    public static float sumMatFPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatFPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatFPtrPtr", rows, cols, mat);
            }
            return (float)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrL {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_LONG_LONG,
            library_h.C_POINTER,
            library_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrL");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern long long sumArrL(const long long *arr, long long count)
     * }
     */
    public static FunctionDescriptor sumArrL$descriptor() {
        return sumArrL.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern long long sumArrL(const long long *arr, long long count)
     * }
     */
    public static MethodHandle sumArrL$handle() {
        return sumArrL.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern long long sumArrL(const long long *arr, long long count)
     * }
     */
    public static MemorySegment sumArrL$address() {
        return sumArrL.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern long long sumArrL(const long long *arr, long long count)
     * }
     */
    public static long sumArrL(MemorySegment arr, long count) {
        var mh$ = sumArrL.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrL", arr, count);
            }
            return (long)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readL {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readL");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readL(long long *val, long long set)
     * }
     */
    public static FunctionDescriptor readL$descriptor() {
        return readL.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readL(long long *val, long long set)
     * }
     */
    public static MethodHandle readL$handle() {
        return readL.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readL(long long *val, long long set)
     * }
     */
    public static MemorySegment readL$address() {
        return readL.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readL(long long *val, long long set)
     * }
     */
    public static void readL(MemorySegment val, long set) {
        var mh$ = readL.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readL", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumMatLPtrPtr {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_LONG_LONG,
            library_h.C_INT,
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumMatLPtrPtr");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern long long sumMatLPtrPtr(int rows, int cols, const long long **mat)
     * }
     */
    public static FunctionDescriptor sumMatLPtrPtr$descriptor() {
        return sumMatLPtrPtr.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern long long sumMatLPtrPtr(int rows, int cols, const long long **mat)
     * }
     */
    public static MethodHandle sumMatLPtrPtr$handle() {
        return sumMatLPtrPtr.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern long long sumMatLPtrPtr(int rows, int cols, const long long **mat)
     * }
     */
    public static MemorySegment sumMatLPtrPtr$address() {
        return sumMatLPtrPtr.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern long long sumMatLPtrPtr(int rows, int cols, const long long **mat)
     * }
     */
    public static long sumMatLPtrPtr(int rows, int cols, MemorySegment mat) {
        var mh$ = sumMatLPtrPtr.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumMatLPtrPtr", rows, cols, mat);
            }
            return (long)mh$.invokeExact(rows, cols, mat);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sumArrI {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("sumArrI");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int sumArrI(const int *arr, int count)
     * }
     */
    public static FunctionDescriptor sumArrI$descriptor() {
        return sumArrI.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int sumArrI(const int *arr, int count)
     * }
     */
    public static MethodHandle sumArrI$handle() {
        return sumArrI.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int sumArrI(const int *arr, int count)
     * }
     */
    public static MemorySegment sumArrI$address() {
        return sumArrI.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int sumArrI(const int *arr, int count)
     * }
     */
    public static int sumArrI(MemorySegment arr, int count) {
        var mh$ = sumArrI.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sumArrI", arr, count);
            }
            return (int)mh$.invokeExact(arr, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readI {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readI");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readI(int *val, int set)
     * }
     */
    public static FunctionDescriptor readI$descriptor() {
        return readI.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readI(int *val, int set)
     * }
     */
    public static MethodHandle readI$handle() {
        return readI.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readI(int *val, int set)
     * }
     */
    public static MemorySegment readI$address() {
        return readI.ADDR;
    }
